<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="@font/acme"
        android:text="@string/reset_your_password"
        android:textColor="#022839"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/resetPswEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/edit_text_strock"
        android:hint="@string/email"
        android:padding="10dp" />

    <Button
        android:id="@+id/sendResetPswEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:backgroundTint="#022839"
        android:text="@string/send" />
</LinearLayout>