<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ScoreActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/final_score"
        android:textColor="@color/darkBlue"
        android:textSize="32sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="250dp"
        android:layout_height="220dp"
        android:layout_gravity="center"
        android:src="@drawable/welcome" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correct_answer"
            android:textColor="@color/darkBlue"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/scoreCorrect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/_0"
            android:textColor="@color/darkBlue"
            android:textSize="22sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wrong_answer"
            android:textColor="@color/darkBlue"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/scoreWrong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/_0"
            android:textColor="@color/darkBlue"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/exitFinaleScore"
            android:layout_width="150dp"
            android:layout_height="55dp"
            android:backgroundTint="@color/darkBlue"
            android:text="@string/exit"
            android:textSize="18sp" />

        <Button
            android:id="@+id/playAgainFinaleScore"
            android:layout_width="150dp"
            android:layout_height="55dp"
            android:layout_marginStart="20dp"
            android:backgroundTint="@color/darkBlue"
            android:text="@string/play_again"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>