<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SignUpActivity">

    <ImageView
        android:id="@+id/loginVector2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:src="@drawable/login_vector2" />

    <TextView
        android:id="@+id/loginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginVector2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/chicle"
        android:text="@string/sign_up"
        android:textColor="#022839"
        android:textSize="32sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginText"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/emailSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/edit_text_strock"
            android:hint="@string/email"
            android:textColor="@color/black"
            android:padding="10dp"
            android:textColorHint="#022839" />

        <EditText
            android:id="@+id/passwordSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_strock"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:padding="10dp"
            android:textColorHint="#022839" />

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/teal_200"
            android:fontFamily="@font/acme"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="#022839"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/HaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/acme"
            android:text="@string/already_have_an_account_sign_in"
            android:textColor="#022839"
            android:textSize="17sp" />


    </LinearLayout>
</RelativeLayout>