<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#89F3A8"
    android:orientation="vertical"
    tools:context=".QuizActivity">

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:gravity="center"
             android:orientation="horizontal"
             android:padding="10dp">

             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/time"
                 android:textColor="#022839"
                 android:textSize="20sp"
                 android:textStyle="bold" />

             <TextView
                 android:id="@+id/timeCount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
                 android:text="@string/time"
                 android:textColor="#022839"
                 android:textSize="17sp" />

             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:text="@string/right_answer"
                 android:textColor="#022839"
                 android:textSize="20sp"
                 android:textStyle="bold" />

             <TextView
                 android:id="@+id/correctAnswer"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
                 android:text="@string/_0"
                 android:textColor="#022839"
                 android:textSize="18sp" />

             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:text="@string/wrong"
                 android:textColor="#022839"
                 android:textSize="20sp"
                 android:textStyle="bold" />

             <TextView
                 android:id="@+id/wrongAnswer"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
                 android:text="@string/_0"
                 android:textColor="#022839"
                 android:textSize="18sp" />
         </LinearLayout>

         <TextView
             android:id="@+id/questionText"
             android:layout_width="match_parent"
             android:layout_height="150dp"
             android:layout_marginHorizontal="20dp"
             android:layout_marginTop="20dp"
             android:background="@drawable/text_view_strock"
             android:gravity="center"
             android:textColor="@color/white"
             android:textSize="18sp" />

         <TextView
             android:id="@+id/firstChoice"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_marginHorizontal="30dp"
             android:layout_marginTop="50dp"
             android:background="@drawable/text_view_strock"
             android:gravity="center"
             android:textColor="@color/white"
             android:textSize="18sp" />

         <TextView
             android:id="@+id/secondChoice"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_marginHorizontal="30dp"
             android:layout_marginTop="10dp"
             android:background="@drawable/text_view_strock"
             android:gravity="center"
             android:textColor="@color/white"
             android:textSize="18sp" />

         <TextView
             android:id="@+id/thirdChoice"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_marginHorizontal="30dp"
             android:layout_marginTop="10dp"
             android:background="@drawable/text_view_strock"
             android:gravity="center"
             android:textColor="@color/white"
             android:textSize="18sp" />

         <TextView
             android:id="@+id/forthChoice"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_marginHorizontal="30dp"
             android:layout_marginTop="10dp"
             android:background="@drawable/text_view_strock"
             android:gravity="center"
             android:textColor="@color/white"
             android:textSize="18sp" />

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:gravity="center"
             android:orientation="horizontal">

             <Button
                 android:id="@+id/exitButton"
                 android:layout_width="120dp"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/darkBlue"
                 android:text="@string/exit"
                 android:textSize="20sp" />

             <Button
                 android:id="@+id/nextButton"
                 android:layout_width="120dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="50dp"
                 android:backgroundTint="@color/darkBlue"
                 android:text="@string/next"
                 android:textSize="20sp" />

         </LinearLayout>
     </LinearLayout>

</ScrollView>